# C-Neural-Net

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpp-app.yml  cpp-cache.yml  cpp-test.yml
src/: CMakeLists.txt  activation_functions.cpp  activation_functions.hpp  cross_entropy_loss.cpp  cross_entropy_loss.hpp  exceptions.hpp  image_loader.cpp  image_loader.hpp  linear.cpp  linear.hpp  metrics.cpp  metrics.hpp  model.cpp  model.hpp  utils.cpp  utils.hpp
src/exceptions/: activation_functions.cpp  activation_functions.hpp  differentiable.cpp  differentiable.hpp  eigen.cpp  eigen.hpp  image_loader.cpp  image_loader.hpp  json.cpp  json.hpp  load.cpp  load.hpp  loss.cpp  loss.hpp  metrics.cpp  metrics.hpp  model.cpp  model.hpp  utils.cpp  utils.hpp
src/utils/: all.hpp  cli.cpp  cli.hpp  exceptions.hpp  image.cpp  image.hpp  indicator.hpp  indicators.cpp  math.cpp  math.hpp  matrix.cpp  matrix.hpp  path.cpp  path.hpp  string.cpp  string.hpp
test/: CMakeLists.txt  fixtures.hpp  test_activation_functions.cpp  test_cross_entropy_loss.cpp  test_image_loader.cpp  test_linear.cpp  test_metrics.cpp  test_model.cpp  test_utils.cpp
